--- a/src/_includes/layout.njk
+++ b/src/_includes/layout.njk
@@ -13,6 +13,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
+    <script defer src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
     <title>{{title}}</title>
     <style>
 
@@ -41,5 +42,16 @@
         {{content | safe}}
     </main>
     {% include 'footer.njk' %}
+    <script>
+        if (window.netlifyIdentity) {
+          window.netlifyIdentity.on("init", user => {
+            if (!user) {
+              window.netlifyIdentity.on("login", () => {
+                document.location.href = "/admin/";
+              });
+            }
+          });
+        }
+      </script>
 </body>
 </html>
