--- a/src/_includes/layoutEs.njk
+++ b/src/_includes/layoutEs.njk
@@ -13,6 +13,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
+    <script defer src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
     <title>{{title}}</title>
     <style>
         summary::-webkit-details-marker { display: none }
@@ -37,5 +38,16 @@
         {{content | safe}}
     </main>
     {% include 'footerEs.njk' %}
+    <script>
+        if (window.netlifyIdentity) {
+          window.netlifyIdentity.on("init", user => {
+            if (!user) {
+              window.netlifyIdentity.on("login", () => {
+                document.location.href = "/admin/";
+              });
+            }
+          });
+        }
+      </script>
 </body>
 </html>
