image paths fix

--- a/src/es/index.njk
+++ b/src/es/index.njk
@@ -33,7 +33,7 @@ layout: layoutEs.njk
                 <h3 class="font-bold text-3xl my-3 text-left group-hover:text-center group-hover:-translate-y-40 transition-all duration-300">{{post.data.title}}</h3>
                 <div class="flex justify-between items-center transition-all duration-300">
                     <div class="flex items-center">
-                        <a href="/"><img class="w-8 h-8 object-cover rounded-full border-2 border-orange-400" src="/assets/images/page/gato1.jpg"></a>
+                        <a href="/"><img class="w-8 h-8 object-cover rounded-full border-2 border-orange-400" src="/assets/images/gato1.jpg"></a>
                         <a href="/" class="my-0 ml-2 transition-all font-bold text-sm underline underline-offset-0 decoration-0 decoration-transparent hover:text-orange-400 hover:underline-offset-2 hover:decoration-orange-400 hover:decoration-2 duration-200">Jorge Antón</a>
                     </div>
                     <a href="/es/categorias/{{post.data.categorie}}" class="border-solid border-orange-400 rounded-2xl pt-1 border-2 m-0 py-1 px-2 transition-all text-sm font-bold hover:text-white hover:bg-orange-400">5 posts</a>
