--- a/src/_includes/header.njk
+++ b/src/_includes/header.njk
@@ -22,11 +22,11 @@
     <div class="hidden items-center font-montserrat tracking-tight md:flex justify-center md:gap-14 xl:text-lg decoration-0 underline-offset-0">
         <div>
             <div class="hidden md:flex items-center gap-2 ml-3 cursor-pointer" id="language">
-                <img class="h-5 w-8 object-cover border border-gray-600 rounded" src="/assets/images/page/english.png" alt="">
+                <img class="h-5 w-8 object-cover border border-gray-600 rounded" src="/assets/images/english.png" alt="">
                 <svg class=" stroke-gray-600 dark:stroke-gray-300" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-chevron-down"><polyline points="6 9 12 15 18 9"></polyline></svg>
             </div>
             <a href="/es/" class="hidden absolute mt-2 border border-gray-600 px-3 py-2 rounded-md gap-2 items-center cursor-pointer hover:bg-gray-100 dark:border-[#6f675b] dark:hover:bg-[#1e2022]" id="languageSelector">
-                <img class="h-5 w-8 object-cover border border-gray-600 rounded" src="/assets/images/page/spanish.webp" alt="">
+                <img class="h-5 w-8 object-cover border border-gray-600 rounded" src="/assets/images/spanish.webp" alt="">
                 <p class="">Español</p>
             </a>
         </div>
@@ -41,7 +41,7 @@
             <details class="group ">
                 <summary class="list-none focus:outline-none cursor-pointer border-b border-gray-600 pb-2 dark:border-[#6f675b]">
                     <div class="flex items-center gap-2 focus:outline-none">
-                        <img class="h-5 w-8 object-cover border border-gray-600 rounded" src="/assets/images/page/english.png" alt="">
+                        <img class="h-5 w-8 object-cover border border-gray-600 rounded" src="/assets/images/english.png" alt="">
                         <span class="text-xl">English</span>
                         <div class="summary-chevron-up">
                             <svg class=" stroke-gray-600 group-open:rotate-180 transition-transform duration-200 dark:stroke-gray-300" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-chevron-down"><polyline points="6 9 12 15 18 9"></polyline></svg>
@@ -49,7 +49,7 @@
                     </div>
                 </summary>
                 <a href="/es" class="flex gap-2 items-center mt-3 absolute">
-                    <img class="h-5 w-8 object-cover border border-gray-600 rounded" src="/assets/images/page/spanish.webp" alt="">
+                    <img class="h-5 w-8 object-cover border border-gray-600 rounded" src="/assets/images/spanish.webp" alt="">
                     <span class="text-xl">Español</span>
                 </a>
             </details>
