--- a/src/_includes/post.njk
+++ b/src/_includes/post.njk
@@ -11,6 +11,10 @@ layout: layout.njk
         transition-duration: 200ms;
 
     }
+
+    summary {
+        cursor: pointer;
+    }
 </style>
 
 <article class="mt-28 mb-24 md:grid justify-center">
